@@ -31,6 +31,7 @@ Next release
   - BaseKeyczarCrypter -> backends.keyczar.BaseCrypter
   - KeyczarCrypter -> backends.keyczar.Crypter
   - EnvironKeyczarCrypter -> backends.keyczar.EnvironCrypter
+  - EnvironGoogleDocsKeyring -> backends.Google.KeyczarDocsKeyring
 * Officially require Python 2.5 or greater (although unofficially, this
   requirement has been in place since 0.10).
 
